--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,7 +12,7 @@
     margin: 16px auto 0;
     max-width: 288px;
     font-size: 16px;
-    line-height: 20px;;
+    line-height: 20px;
   }
 }
 
@@ -21,7 +21,7 @@
     margin: 16px auto 0;
     max-width: 288px;
     font-size: 16px;
-    line-height: 20px;;
+    line-height: 20px;
     margin-bottom: 41px;
   }
 }
