--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,10 +9,17 @@
     margin: 0 0 32px;
 }
 
+@media screen and (max-width:768px) {
+    .cover__title {
+        margin: 35px;
+    }
+}
+
 @media screen and (max-width:400px) {
     .cover__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 0;
+        margin: 21px;;
     }
 }
+
