--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,6 +11,6 @@
     .footer__link {
         margin-bottom: 32px;
         font-size: 24px;
-        line-height: 1;
+        line-height: 24px;
     }
 }
