--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -19,7 +19,7 @@
     .cover__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 21px;;
+        margin: 21px;
     }
 }
 
