--- a/blocks/place/__web/place__web.css
+++ b/blocks/place/__web/place__web.css
@@ -1,12 +1,13 @@
-.place__list {
-    list-style: none;
+.place__web {
+    /* list-style: none; */
     padding-left: 0;
     margin: 0;
     align-self: end;
+    margin-top: 83px;
 }
 
 @media screen and (max-width:400px) {
-    .place__list {
+    .place__web {
         margin-left: 14px;
     }
 }
